--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,50 @@
-marshmallow>=3
-factory_boy
-flask
-flask-httpauth
-flask-restful
-flask-migrate
-flask-sqlalchemy
-flask-marshmallow
-marshmallow-sqlalchemy
-passlib
-python-dotenv
-pytest
-pytest-flask
-pytest-runner
-pytest-factoryboy
+alembic==1.11.3
+aniso8601==9.0.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.6
+exceptiongroup==1.1.3
+factory-boy==3.3.0
+Faker==18.13.0
+Flask==2.2.5
+Flask-HTTPAuth==4.8.0
+Flask-JWT-Extended==4.5.2
+flask-marshmallow==0.15.0
+Flask-Migrate==4.0.4
+Flask-RESTful==0.3.10
+flask-sqlalchemy==3.0.5
+greenlet==2.0.2
+idna==3.4
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
+inflection==0.5.1
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
+packaging==23.1
+passlib==1.7.4
+pluggy==1.2.0
+PyJWT==2.8.0
+pytest==7.4.0
+pytest-factoryboy==2.5.1
+pytest-flask==1.2.0
+pytest-runner==6.0.0
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+pytz==2023.3
+PyYAML==6.0.1
+requests==2.31.0
+responses==0.23.3
+six==1.16.0
+SQLAlchemy==2.0.20
+tomli==2.0.1
+types-PyYAML==6.0.12.11
+typing-extensions==4.7.1
+urllib3==2.0.4
+Werkzeug==2.2.3
+zipp==3.15.0
