--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ PyJWT==2.8.0
 pytest==7.4.0
 pytest-factoryboy==2.5.1
 pytest-flask==1.2.0
+pytest-mock==3.11.1
 pytest-runner==6.0.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
